--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="utf-8">
         <title>PeterWang</title>
-        <link rel="stylesheet" type="text/css" href="homepage.css"/>
+        <link rel="stylesheet" type="text/css" href="home.css"/>
     </head>
     <body>
         <div class="headline">
