update the javascrip file

--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
                 <div class="t4">Section 4</div>
             </div>
         </div>
-        <script></script>
+        <script src="index.js" charset="utf-8"></script>
     </body>
 </html>
