update the html file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div class="title">Peter's Blog</div>
             <div class="list1">
                 <div class="item1">
-                    <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/programming.html">
-                        <div>My Profile</div>
+                    <a href="https://pingw220.github.io/about/">
+                        <div>about</div>
                     </a>
                 </div>
                 <div class="item2">
