update the html file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="utf-8">
-        <title>PeterWang</title>
-        <link rel="stylesheet" type="text/css" href="home.css"/>
+        <title>PW</title>
+        <link rel="stylesheet" type="text/css" href="styles.css"/>
     </head>
     <body>
         <div class="headline">
-            <div class="title">Peter's Blog</div>
+            <div class="title">Ping Wang</div>
             <div class="list1">
                 <div class="item1">
                     <a href="https://pingw220.github.io/about/">
