--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
                 </div>
                 <div class="item2">
                     <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/learningexperiences.html">
-                        <div>Learning expeirnce</div>
+                        <div>Projects</div>
                     </a>
                 </div>
                 <div class="item3">
                     <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/programming.html">
-                        <div>Programming</div>
+                        <div>Cello</div>
                     </a>
                 </div>
                 <div class="item4">
                     <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/Others.html">
-                        <div>Others</div>
+                        <div></div>
                     </a>
                 </div>
             </div>
