projects and cello

--- a/index.html
+++ b/index.html
@@ -16,18 +16,13 @@
                     </a>
                 </div>
                 <div class="item2">
-                    <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/learningexperiences.html">
+                    <a href="https://pingw220.github.io/Projects/">
                         <div>Projects</div>
                     </a>
                 </div>
                 <div class="item3">
-                    <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/programming.html">
+                    <a href="https://pingw220.github.io/Cello/">
                         <div>Cello</div>
-                    </a>
-                </div>
-                <div class="item4">
-                    <a href="file:///Users/peterwang/code/javascript/practice%20project/PeterWang%20Blog/Others.html">
-                        <div></div>
                     </a>
                 </div>
             </div>
