--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="text">Have a Good Time!</div>
         </div>
         <div class="subject">
-            <div class="menu">MENU</div>
+            <div class="menu">Recent</div>
         </div>
         <div class="section">
             <div class="section1">
@@ -66,12 +66,6 @@
             </div>
             <div class="section2">
                 <div class="t2">Section 2</div>
-            </div>
-            <div class="section3">
-                <div class="t3">Section 3</div>
-            </div>
-            <div class="section4">
-                <div class="t4">Section 4</div>
             </div>
         </div>
         <script src="index.js" charset="utf-8"></script>
