--- a/index.html
+++ b/index.html
@@ -55,17 +55,19 @@
             <div class="text">Hello everyone!</div>
         </div>
         <div class="welcome2" onmousedown="down2(this);">
-            <div class="text">Have a Good Time!</div>
+            <div class="text">Enjoy My Website!</div>
         </div>
         <div class="subject">
             <div class="menu">Recent</div>
         </div>
         <div class="section">
             <div class="section1">
-                <div class="t1">Section 1</div>
+                <a href="https://pingw220.github.io/Drum-Kit-Project/">
+                    <img src = "resource/drum_project.png"/>
+                </a>
             </div>
             <div class="section2">
-                <div class="t2">Section 2</div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/i4_G3LoFnMA?si=OUfDD7SvfCFh_oJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
         <script src="index.js" charset="utf-8"></script>
