--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="list1">
                 <div class="item1">
                     <a href="https://pingw220.github.io/about/">
-                        <div>about</div>
+                        <div>About</div>
                     </a>
                 </div>
                 <div class="item2">
