--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>PW</title>
         <link rel="stylesheet" type="text/css" href="styles.css"/>
     </head>
     <body>
         <div class="headline">
-            <div class="title">Ping Wang</div>
-            <div class="list1">
-                <div class="item1">
+            <div class="name">Ping Wang</div>
+            <div class="category">
+                <div class="about">
                     <a href="https://pingw220.github.io/about/">
                         <div>About</div>
                     </a>
                 </div>
-                <div class="item2">
+                <div class="projects">
                     <a href="https://pingw220.github.io/Projects/">
                         <div>Projects</div>
                     </a>
                 </div>
-                <div class="item3">
+                <div class="cello">
                     <a href="https://pingw220.github.io/Cello/">
                         <div>Cello</div>
                     </a>
