--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/i4_G3LoFnMA?si=OUfDD7SvfCFh_oJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
+        <footer class="footer">
+            <div class="footer_content">
+                The website is made by Ping Wang.
+            </div>
+        </footer>
         <script src="index.js" charset="utf-8"></script>
     </body>
 </html>
