--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                         <div>Projects</div>
                     </a>
                 </div>
+                <div class="posts">
+                    <a href="https://pingw220.github.io/posts/">
+                        <div>Posts</div>
+                    </a>
+                </div>
                 <div class="cello">
                     <a href="https://pingw220.github.io/Cello/">
                         <div>Cello</div>
