--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     </a>
                 </div>
                 <div class="projects">
-                    <a href="https://pingw220.github.io/Projects/">
+                    <a href="https://pingw220.github.io/projects/">
                         <div>Projects</div>
                     </a>
                 </div>
@@ -26,7 +26,7 @@
                     </a>
                 </div>
                 <div class="cello">
-                    <a href="https://pingw220.github.io/Cello/">
+                    <a href="https://pingw220.github.io/cello/">
                         <div>Cello</div>
                     </a>
                 </div>
