--- a/index.html
+++ b/index.html
@@ -67,12 +67,23 @@
         </div>
         <div class="section">
             <div class="section1">
-                <a href="https://pingw220.github.io/Drum-Kit-Project/">
+                <div class="subtitle">
+                    Drum Kit Project
+                </div>
+                <div class="postpic">
                     <img src = "resource/drum_project.png"/>
-                </a>
+                </div>
+                <div class="subinfo">
+                    <a href="https://pingw220.github.io/Drum-Kit-Project/">
+                        click here to see the project
+                    </a>
+                </div>
             </div>
             <div class="section2">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/i4_G3LoFnMA?si=OUfDD7SvfCFh_oJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="subtitle1">
+                    Cello showcase
+                </div>
+                <iframe width="80px" height="80px" src="https://www.youtube.com/embed/i4_G3LoFnMA?si=OUfDD7SvfCFh_oJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
         <footer class="footer">
