--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>PW</title>
         <link rel="stylesheet" type="text/css" href="styles.css"/>
+        <script src="https://kit.fontawesome.com/160e427c27.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="headline">
@@ -90,7 +91,28 @@
             <div class="footer_content">
                 The website is made by Ping Wang.
             </div>
+            <div>
+                <a href="https://github.com/pingw220">
+                    <i class="fa fa-github fa-lg" style="color: black"></i>
+                </a>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/profile.php?id=100024625622427">
+                    <i class="fa-brands fa-facebook fa-lg"></i>
+                </a>
+            </div>
+            <div>
+                <a href="https://www.instagram.com/pingw220/">
+                    <i class="fa-brands fa-instagram fa-lg"></i>
+                </a>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/pingw220/">
+                    <i class="fa-brands fa-linkedin fa-lg"></i>
+                </a>
+            </div>
         </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
 </html>
