--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
                 </div>
             </div>
         </div>
-        <div class="welcome1" onmousedown="down1(this);">
-            <div class="text">Hello everyone!</div>
-        </div>
-        <div class="welcome2" onmousedown="down2(this);">
-            <div class="text">Enjoy My Website!</div>
+        <div class="welcome1"">
+            <div class="text">
+                "In my case, I can sincerely say that nothing is impossible... When I was saying I want to be No. 1 of the world, and I was seven or eight years old, most of the people were laughing at me because it seems like I have one percent of chances to do that, and I've done it."
+                <br />
+                <br />
+                <p>Novak Djokovic</p>
+            </div>
         </div>
         <div class="subject">
             <div class="menu">Recent</div>
