--- a/index.html
+++ b/index.html
@@ -32,32 +32,8 @@
                     </a>
                 </div>
             </div>
-            <div class="listpicture">
-                <img src="list.png" width="40" height="40" onmousedown="down3(this);"/>
-            </div>
-            <div class="list2">
-                <div class="it0">
-                    <img src="x.png" width="40" height="40" onmousedown="down4(this);"/>
-                </div>
-                <hr/>
-                <div class="it1">
-                    <div>Item1</div>
-                </div>
-                <hr/>
-                <div class="it2">
-                    <div>Item2</div>
-                </div>
-                <hr/>
-                <div class="it3">
-                    <div>Item3</div>
-                </div>
-                <hr/>
-                <div class="it4">
-                    <div>Item4</div>
-                </div>
-            </div>
         </div>
-        <div class="welcome1"">
+        <div class="welcome"">
             <div class="text">
                 "In my case, I can sincerely say that nothing is impossible... When I was saying I want to be No. 1 of the world, and I was seven or eight years old, most of the people were laughing at me because it seems like I have one percent of chances to do that, and I've done it."
                 <br />
@@ -70,7 +46,7 @@
         </div>
         <div class="section">
             <div class="section1">
-                <div class="subtitle">
+                <div class="subtitle1">
                     Drum Kit Project
                 </div>
                 <div class="postpic">
@@ -83,7 +59,7 @@
                 </div>
             </div>
             <div class="section2">
-                <div class="subtitle1">
+                <div class="subtitle2">
                     Cello showcase
                 </div>
                 <iframe width="80px" height="80px" src="https://www.youtube.com/embed/i4_G3LoFnMA?si=OUfDD7SvfCFh_oJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
