--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="headline">
             <div class="name">Ping Wang</div>
-            <h1>Ping Wang</h1>
+            <h1 class="mainname">Ping Wang blog</h1>
             <div class="category">
                 <div class="about">
                     <a href="https://pingw220.github.io/about/">
