--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
             <div class="menu">Recent</div>
         </div>
         <div class="section">
-            <div class="section1">
-                <div class="subtitle1">
-                    Drum Kit Project
+            <div class="section2">
+                <div class="subtitle2">
+                    Tennis Court Classification with TensorFlow
                 </div>
-                <div class="postpic">
-                    <img src = "resource/drum_project.png"/>
-                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hKUGBdbz7zE?si=X_qpDT0hfg7DR7_z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <div class="subinfo">
-                    <a href="https://pingw220.github.io/Drum-Kit-Project/">
+                    <a href="https://github.com/pingw220/Tennis-Court-Recognition-Project">
                         click here to see the project
                     </a>
                 </div>
