--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
         <div class="section">
             <div class="section2">
                 <div class="subtitle2">
+                    Handwritten Digit Recognition Project
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3aFW2vfLtAw?si=KXwySgIYqmH2VPQh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                <div class="subinfo">
+                    <a href="https://github.com/pingw220/Handwritten-Digit-Recognition">
+                        click here to see the project
+                    </a>
+                </div>
+            </div>
+            <div class="section2">
+                <div class="subtitle2">
                     Tennis Court Classification with TensorFlow
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/hKUGBdbz7zE?si=X_qpDT0hfg7DR7_z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -56,12 +66,6 @@
                         click here to see the project
                     </a>
                 </div>
-            </div>
-            <div class="section2">
-                <div class="subtitle2">
-                    Cello showcase
-                </div>
-                <iframe width="80px" height="80px" src="https://www.youtube.com/embed/i4_G3LoFnMA?si=OUfDD7SvfCFh_oJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
         <footer class="footer">
